--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babelify": "^6.1.3",
     "base-url": "^1.0.0",
     "browserify": "^9.0.3",
+    "browserify-ngannotate": "^1.0.1",
     "browserify-shim": "^3.8.3",
     "clean-css": "2.2.2",
     "coffee-script": "1.7.1",
@@ -59,6 +60,7 @@
     "transform": [
       "strip-bomify",
       "coffeeify",
+      "browserify-ngannotate",
       "browserify-shim"
     ]
   },
