--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "version": "0.0.0",
   "description": "The Internet, peer reviewed.",
   "dependencies": {
+    "angular": "1.2.28",
+    "angular-animate": "1.2.28",
+    "angular-resource": "1.2.28",
+    "angular-route": "1.2.28",
+    "angulartics": "0.17.2",
     "babelify": "^6.1.3",
     "base-url": "^1.0.0",
+    "bootstrap": "3.3.5",
     "browserify": "^9.0.3",
     "browserify-ngannotate": "^1.0.1",
     "browserify-shim": "^3.8.3",
@@ -20,6 +26,11 @@
     "es6-promise": "^2.1.0",
     "extend": "^2.0.0",
     "hammerjs": "^2.0.4",
+    "jquery": "1.11.1",
+    "jstimezonedetect": "1.0.5",
+    "moment": "2.5.0",
+    "moment-timezone": "0.0.1",
+    "ng-tags-input": "2.2.0",
     "node-iterator-shim": "^1.0.1",
     "node-uuid": "^1.4.3",
     "raf": "^2.0.4",
@@ -67,10 +78,10 @@
   "browser": {
     "annotator": "./h/static/scripts/vendor/annotator.js",
     "annotator-auth": "./h/static/scripts/vendor/annotator.auth.js",
-    "angular": "./h/static/scripts/vendor/angular.js",
+    "angular": "./node_modules/angular/angular.js",
     "es6-promise": "./node_modules/es6-promise/dist/es6-promise.js",
     "hammerjs": "./node_modules/hammerjs/hammer.js",
-    "jquery": "./h/static/scripts/vendor/jquery.js",
+    "jquery": "./node_modules/jquery/dist/jquery.js",
     "jquery-scrollintoview": "./h/static/scripts/vendor/jquery.scrollintoview.js",
     "jschannel": "./h/static/scripts/vendor/jschannel.js"
   },
