--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "raf": "^3.1.0",
     "showdown": "^1.2.1",
     "strip-bomify": "^0.1.0",
-    "uglify-js": "^2.4.14"
+    "uglify-js": "^2.4.14",
+    "unorm": "^1.3.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
