--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "angular": "1.2.28",
     "angular-animate": "1.2.28",
     "angular-jwt": "0.0.9",
+    "angular-mocks": "^1.2.28",
     "angular-resource": "1.2.28",
     "angular-route": "1.2.28",
+    "angular-sanitize": "1.2.28",
     "angulartics": "0.17.2",
     "babelify": "^6.1.3",
     "base-url": "^1.0.0",
