--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular-route": "1.2.28",
     "angular-sanitize": "1.2.28",
     "angulartics": "0.17.2",
+    "autofill-event": "0.0.1",
     "babelify": "^6.1.3",
     "base-url": "^1.0.0",
     "bootstrap": "3.3.5",
