--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "hammerjs": "^2.0.4",
     "jquery": "1.11.1",
     "jstimezonedetect": "1.0.5",
-    "moment": "2.5.0",
-    "moment-timezone": "0.0.1",
+    "moment": "^2.10.6",
+    "moment-timezone": "^0.4.0",
     "ng-tags-input": "2.2.0",
     "node-iterator-shim": "^1.0.1",
     "node-uuid": "^1.4.3",
@@ -88,7 +88,8 @@
     "es6-promise": "./node_modules/es6-promise/dist/es6-promise.js",
     "hammerjs": "./node_modules/hammerjs/hammer.js",
     "jquery": "./node_modules/jquery/dist/jquery.js",
-    "jquery-scrollintoview": "./h/static/scripts/vendor/jquery.scrollintoview.js"
+    "jquery-scrollintoview": "./h/static/scripts/vendor/jquery.scrollintoview.js",
+    "moment": "./node_modules/moment/min/moment-with-locales.js"
   },
   "browserify-shim": {
     "annotator": {
