--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "showdown": "^1.2.1",
     "strip-bomify": "^0.1.0",
     "uglify-js": "^2.4.14",
-    "unorm": "^1.3.3"
+    "unorm": "^1.3.3",
+    "wgxpath": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
