Partially revert polyfill changes
It turns out IE10 doesn't have the URL constructor and somehow I
misinterpreted the MDN docs.

The bind polyfill still isn't needed, except by PhantomJS.

It also seems silly not to just include wgxpath without npm. Save
the browserify-ing step.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -68,13 +68,15 @@ katex:
   contents: h:static/scripts/vendor/katex.js
 
 
-# Wicked Good XPath (polyfill)
+# Polyfills
 wgxpath:
-  filters:
-    - browserify
-    - uglifyjs
+  filters: uglifyjs
   output: scripts/vendor/wgxpath.install.min.js
-  contents: ../../node_modules/wgxpath/wgxpath.install.js
+  contents: h:static/scripts/vendor/wgxpath.install.js
+url:
+  filters: uglifyjs
+  output: scripts/vendor/url.min.js
+  contents: h:static/scripts/vendor/url.js
 
 
 # Admin areas
@@ -122,6 +124,7 @@ app_js:
     - angulartics
     - angulartics_ga
     - katex
+    - url
     - output: scripts/app.min.js
       filters:
         - browserify
