--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "raf": "^3.1.0",
     "showdown": "^1.2.1",
     "uglify-js": "^2.4.14",
-    "unorm": "^1.3.3",
-    "wgxpath": "^1.0.0"
+    "unorm": "^1.3.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
