--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -20,7 +20,11 @@
     "<all_urls>",
 
     "contentSettings",
-    "tabs"
+    "tabs",
+
+    "fileBrowserHandler",
+    "webRequest", "webRequestBlocking",
+    "storage"
   ],
   "content_security_policy":
     "script-src 'self' 'unsafe-eval' {{ src }} https://cdn.mathjax.org; object-src 'self'; font-src 'self' data:;",
@@ -28,6 +32,10 @@
   "background": {
     "persistent": true,
     "scripts": [
+      "lib/preserve-referer.js",
+      "lib/feature-detect.js",
+      "lib/pdfHandler.js",
+
       "lib/tab-store.js",
       "lib/tab-state.js",
       "lib/tab-error-cache.js",
