Actually remove jquery.scrollintoview totally
This change requires us to introduce proxyquire for stubbing modules
that have a single function as their default export, such as the
scroll-into-view module.

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -54,7 +54,7 @@ webassets.cache_max_age: 31536000
 webassets.manifest: False
 webassets.static_view: True
 webassets.browserify_bin: ./node_modules/.bin/browserify
-webassets.browserify_extra_args: --extension=.coffee
+webassets.browserify_extra_args: --extension=.coffee --transform coffeeify
 webassets.cleancss_bin: ./node_modules/.bin/cleancss
 webassets.uglifyjs_bin: ./node_modules/.bin/uglifyjs
 
