--- a/conf/development.ini
+++ b/conf/development.ini
@@ -43,7 +43,7 @@ webassets.debug: True
 webassets.manifest: False
 webassets.static_view: True
 webassets.browserify_bin: node_modules/.bin/browserify
-webassets.browserify_extra_args: --extension=.coffee
+webassets.browserify_extra_args: --extension=.coffee --transform coffeeify
 
 ;http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
 debugtoolbar.show_on_exc_only: True
