--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "karma-sinon": "^1.0.4",
     "mocha": "^1.20.1",
     "phantomjs": "^1.9.7",
+    "proxyquire": "^1.6.0",
+    "proxyquire-universal": "^1.0.8",
+    "proxyquireify": "^3.0.0",
     "sinon": "^1.15.4"
   },
   "engines": {
@@ -75,7 +78,6 @@
   "homepage": "https://github.com/hypothesis/h",
   "browserify": {
     "transform": [
-      "coffeeify",
       "browserify-ngannotate",
       "browserify-shim"
     ]
