Fix browser extension test builds

--- a/conf/testext.ini
+++ b/conf/testext.ini
@@ -15,7 +15,7 @@ webassets.static_view: True
 webassets.uglifyjs_bin: node_modules/.bin/uglifyjs
 webassets.cleancss_bin: node_modules/.bin/cleancss
 webassets.browserify_bin: node_modules/.bin/browserify
-webassets.browserify_extra_args: --extension=.coffee
+webassets.browserify_extra_args: --extension=.coffee --transform coffeeify
 
 
 [loggers]
