--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -18,13 +18,11 @@
   "offline_enabled": false,
   "permissions": [
     "<all_urls>",
-
     "contentSettings",
-    "tabs",
-
     "fileBrowserHandler",
-    "webRequest", "webRequestBlocking",
-    "storage"
+    "tabs",
+    "webRequest",
+    "webRequestBlocking"
   ],
   "content_security_policy":
     "script-src 'self' 'unsafe-eval' {{ src }} https://cdn.mathjax.org; object-src 'self'; font-src 'self' data:;",
@@ -32,10 +30,7 @@
   "background": {
     "persistent": true,
     "scripts": [
-      "lib/feature-detect.js",
       "lib/pdfHandler.js",
-      "lib/preserve-referer.js",
-
       "lib/tab-store.js",
       "lib/tab-state.js",
       "lib/tab-error-cache.js",
