Upgrade clean-css
In order to upgrade clean-css it is necessary to import the filter
definition from the future version of webassets. This version takes
extra arguments in the filter configuration, allowing us to disable
the advanced optimizations that became the default in 3.0+ but that
breaks some of our styles.

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -56,6 +56,7 @@ webassets.static_view: True
 webassets.browserify_bin: ./node_modules/.bin/browserify
 webassets.browserify_extra_args: --extension=.coffee --transform coffeeify
 webassets.cleancss_bin: ./node_modules/.bin/cleancss
+webassets.cleancss_extra_args: --skip-advanced --skip-rebase
 webassets.uglifyjs_bin: ./node_modules/.bin/uglifyjs
 
 
