--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "clean-css": "3.3.9",
     "coffee-script": "1.7.1",
     "coffeeify": "^1.0.0",
+    "core-js": "^1.1.1",
     "diff-match-patch": "^1.0.0",
     "dom-anchor-fragment": "^1.0.1",
     "dom-anchor-text-position": "^1.0.3",
     "dom-anchor-text-quote": "^1.3.2",
     "dom-seek": "^1.0.1",
-    "es6-promise": "^2.1.0",
     "extend": "^2.0.0",
     "frame-rpc": "^1.3.1",
     "hammerjs": "^2.0.4",
