--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ng-tags-input": "2.2.0",
     "node-iterator-shim": "^1.0.1",
     "node-uuid": "^1.4.3",
+    "raf": "^3.1.0",
     "scroll-into-view": "^1.3.1",
     "showdown": "^1.2.1",
     "uglify-js": "^2.4.14",
