Unbundle URL polyfill
The js-polyfills library is a nice one. It provides enough for
PhantomJS and it provides the URL polyfill. However, we keep core-js
since for production it's better to have the lightweight requirement
of just the es6.promise module without global namespace pollution.

We tolerate pollution of the global namespace for browsers with a
broken or absent URL constructor implementation.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -76,7 +76,7 @@ wgxpath:
 url:
   filters: uglifyjs
   output: scripts/vendor/url.min.js
-  contents: h:static/scripts/vendor/url.js
+  contents: ../../node_modules/js-polyfills/url.js
 
 
 # Admin areas
@@ -178,6 +178,7 @@ inject:
 
 inject_js:
   contents:
+  - url
   - output: scripts/hypothesis.min.js
     filters: uglifyjs
     contents:
