--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "frame-rpc": "^1.3.1",
     "hammerjs": "^2.0.4",
     "jquery": "1.11.1",
+    "js-polyfills": "^0.1.11",
     "moment": "^2.10.6",
     "ng-tags-input": "2.2.0",
     "node-uuid": "^1.4.3",
