--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "angulartics": "0.17.2",
     "autofill-event": "0.0.1",
     "babelify": "^6.1.3",
-    "base-url": "^1.0.0",
     "bootstrap": "3.3.5",
     "browserify": "^9.0.3",
     "browserify-ngannotate": "^1.0.1",
@@ -24,6 +23,7 @@
     "coffeeify": "^1.0.0",
     "core-js": "^1.1.1",
     "diff-match-patch": "^1.0.0",
+    "document-base-uri": "^1.0.0",
     "dom-anchor-fragment": "^1.0.1",
     "dom-anchor-text-position": "^2.0.0",
     "dom-anchor-text-quote": "^2.0.0",
