Clean up socket, threading, mapper with routing
Move all the logic required to set up a clean environment for the
client views into the dependency resolution mechanism of ngRoute.

The annotation mapper gains an unloadAnnotations method to make the
isolated code cleaner.

Use angular-websocket to remove the need for our own socket class.

The AppController becomes much more sane.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-resource": "1.2.28",
     "angular-route": "1.2.28",
     "angular-sanitize": "1.2.28",
+    "angular-websocket": "^1.0.13",
     "angulartics": "0.17.2",
     "autofill-event": "0.0.1",
     "babelify": "^6.1.3",
