Fix broken card titles for some annotations
This fixes two issues on the annotation cards for some annotations:

1. If the annotated document has a non-http(s) URI (e.g. a local file://
   URI) then don't hyperlink the document's title to that URI

2. If the annotated document has no .domain value or its domain is the
   same as its title then don't display anything, instead of displaying
   a pair of emtpy braces ().

To fix this move the logic for formatting an annotation's document's title
and domain into AngularJS filters where it can be tested, instead of in
the template.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dom-anchor-text-position": "^2.0.0",
     "dom-anchor-text-quote": "^2.0.0",
     "dom-seek": "^1.0.1",
+    "escape-html": "^1.0.3",
     "extend": "^2.0.0",
     "frame-rpc": "^1.3.1",
     "hammerjs": "^2.0.4",
