Consolidate .gitignore files
Having these scattered about across the repository makes it hard to work
out where something is ignored, and most tools/editors that read
.gitignore files don't pay attention to those not in the repository
root.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@ node_modules/
 *.pyo
 
 *.log
+
+h/static/.webassets-cache/
+h/static/webassets-external/
+
+h/static/scripts/**/*.min.js
+h/static/scripts/account.*js
+h/static/scripts/app.*js
+h/static/scripts/config.*js
+h/static/scripts/hypothesis.*js
+
+h/static/styles/*.css
+h/static/styles/vendor/bootstrap.min.css
