Use autoprefixer to add vendor prefixes to CSS
Use postcss and the autoprefixer plugin to post-process
CSS to add vendor prefixes and remove use of compass
mixins which did the same thing.

This moves compatibility concerns out of our styling
and down to a post-processor whose options can be adjusted
as necessary and moves us a step towards removing the
build dependency on compass.

Looking at the generated output, it fixes several issues
where we were inconsistent about which prefixes were used.

Pyramid webassets does have an autoprefixer filter but
it was written for an older version of autoprefixer which
was a standalone tool rather than a postcss plugin. In future
this also paves the way to replacing the cleancss asset filter
with an optional step in the postcss-filter.js script.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -87,7 +87,7 @@ admin_css:
       filters: cleancss
       contents:
         - output: h:static/styles/admin.css
-          filters: compass
+          filters: compass,postcss
           contents:
             - h:static/styles/admin.scss
 admin_js:
@@ -152,7 +152,7 @@ app_css:
     - h:static/styles/vendor/icomoon.css
     - h:static/styles/vendor/katex.min.css
     - output: styles/app.css
-      filters: compass
+      filters: compass,postcss
       contents:
         - h:static/styles/app.scss
       depends:
@@ -202,7 +202,7 @@ inject_css:
   contents:
     - h:static/styles/vendor/icomoon.css
     - output: styles/hypothesis.css
-      filters: compass
+      filters: compass,postcss
       contents:
         - h:static/styles/annotator/inject.scss
         - h:static/styles/annotator/pdfjs-overrides.scss
@@ -221,7 +221,7 @@ help_page_css:
   contents:
     - h:static/styles/vendor/icomoon.css
     - output: styles/help-page.css
-      filters: compass
+      filters: compass,postcss
       contents:
         - h:static/styles/help-page.scss
       depends:
