--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "unorm": "^1.3.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
     "chai": "^3.2.0",
+    "es6-promise": "^3.0.2",
     "jscs": "^1.13.1",
     "karma": "^0.13.10",
     "karma-browserify": "^3.0.3",
@@ -57,6 +59,7 @@
     "mocha": "^1.20.1",
     "phantom-ownpropertynames": "^1.0.0",
     "phantomjs": "^1.9.7",
+    "postcss": "^5.0.6",
     "proxyquire": "^1.6.0",
     "proxyquire-universal": "^1.0.8",
     "proxyquireify": "^3.0.0",
