Make auth.effective_principals do what it says
Previously `h.auth.effective_principals` was a "groupfinder", returning
the list of groups of which a given userid is a member.

This commit renames that function to `groupfinder`, and updates the two
configuration files to use it in that capacity. It also adds a new
helper function to `h.auth`, which actually does return the list of
effective principals for a given userid.

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -21,7 +21,7 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 #mail.port: 25
 
 # Authentication configuration -- see the pyramid_multiauth documentation
-multiauth.groupfinder: h.auth.effective_principals
+multiauth.groupfinder: h.auth.groupfinder
 multiauth.policies: remote session
 multiauth.policy.remote.use: pyramid.authentication.RemoteUserAuthenticationPolicy
 multiauth.policy.session.use: pyramid.authentication.SessionAuthenticationPolicy
