--- a/conf/development.ini
+++ b/conf/development.ini
@@ -11,7 +11,7 @@ es.host: http://localhost:9200
 
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
-multiauth.groupfinder: h.auth.effective_principals
+multiauth.groupfinder: h.auth.groupfinder
 multiauth.policies: remote session
 multiauth.policy.remote.use: pyramid.authentication.RemoteUserAuthenticationPolicy
 multiauth.policy.session.use: pyramid.authentication.SessionAuthenticationPolicy
