Implement new designs for pages for creating, joining and sharing groups
 * Implement new look for the Create, Join and Share groups pages.
   The forms are functional without JS but contain a small amount
   of JS logic for enhancements such as selecting the content of
   the share pane.

 * Merge the 'Login to join' and 'Join' pages into a single
   form. The only difference between the two is that
   when the user is not signed in, the button label
   changes from 'Join <Group Name>' to 'Sign in to join <Group Name>'
   which redirects to the login page.

 * Create a new site.scss file which is intended to
   contain only styling for the website and a site-bundle.js
   bundle which contains JS code used only for the site.

 * Extract out the button styles used by <dropdown-menu-btn> into
   a separate .scss file for re-use

 * Add additional colors used by the new group forms
   to variables.scss. To avoid the problems
   with naming that arise when trying to insert additional
   colors into a list with names like 'light', 'lighter' etc.
   I'm starting to use http://chir.ag/projects/name-that-color for
   memorable names.

 * Start to use a '$color-' prefix for colors, in preparation
   for extracting colors into their own file.

Card 93

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ h/static/scripts/account.*js
 h/static/scripts/app.*js
 h/static/scripts/config.*js
 h/static/scripts/hypothesis.*js
+h/static/scripts/*-bundle.js
 
 h/static/styles/*.css
 h/static/styles/vendor/bootstrap.min.css
