--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon": "^1.0.4",
+    "karma-sinon-chrome": "BigBlueHat/karma-sinon-chrome",
     "mocha": "^1.20.1",
     "phantomjs": "^1.9.7",
     "proxyquire": "^1.6.0",
