Load API URL from a settings object, not a <link> tag
The approach of embedding a link tag in the app.html doesn't really give
us a great deal of flexibility. URLs within the application, perhaps as
a result, tend to be created either from baseURI or from the API URL,
called `serviceUrl` in the code.

This commit leaves the <base> tag alone, but:

- replaces the serviceUrl <link> tag with a settings object,
  `window.hypothesis.settings` which is inlined into app.html.
- replaces the serviceUrl angular service with a generic settings
  service.
- renames serviceUrl to apiUrl, to make its purpose more obvious.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -138,7 +138,7 @@ app_js:
             - h:static/scripts/features.js
             - h:static/scripts/groups.js
             - h:static/scripts/session.js
-            - h:static/scripts/service-url.js
+            - h:static/scripts/settings.js
             - h:static/scripts/directive/*.coffee
             - h:static/scripts/directive/*.js
             - h:static/scripts/filter/*.js
