--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -25,7 +25,7 @@ angular_tags_input:
 angular_toastr:
   filters: uglifyjs
   output: scripts/vendor/angular-toastr.min.js
-  contents: h:static/scripts/vendor/angular-toastr.js
+  contents: ../../node_modules/angular-toastr/dist/angular-toastr.tpls.js
 
 
 # Analytics
@@ -144,7 +144,7 @@ app_css:
   filters: cleancss
   contents:
     - h:static/styles/vendor/angular-csp.css
-    - h:static/styles/vendor/angular-toastr.css
+    - ../../node_modules/angular-toastr/dist/angular-toastr.css
     - h:static/styles/vendor/icomoon.css
     - h:static/styles/vendor/katex.min.css
     - output: styles/app.css
