Remove unneeded ui-bootstrap shim
This shim was used to facilitate the use of a newer version of the
'ui.bootstrap' module with an older version of Angular. Upgrading to
Angular 1.4 renders it surplus to requirements.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -7,6 +7,10 @@ angular_animate:
   filters: uglifyjs
   output: scripts/vendor/angular-animate.min.js
   contents: ../../node_modules/angular-animate/angular-animate.js
+angular_bootstrap:
+  filters: uglifyjs
+  output: scripts/vendor/angular-bootstrap.min.js
+  contents: h:static/scripts/vendor/ui-bootstrap-custom-tpls-0.13.4.js
 angular_resource:
   filters: uglifyjs
   output: scripts/vendor/angular-resource.min.js
@@ -111,6 +115,7 @@ app_js:
     - jquery
     - angular
     - angular_animate
+    - angular_bootstrap
     - angular_resource
     - angular_route
     - angular_sanitize
