--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -139,6 +139,7 @@ app_js:
             - h:static/scripts/groups.js
             - h:static/scripts/session.js
             - h:static/scripts/settings.js
+            - h:static/scripts/store.js
             - h:static/scripts/directive/*.coffee
             - h:static/scripts/directive/*.js
             - h:static/scripts/filter/*.js
