Add request context to errors caught by Sentry
At the moment errors caught and processed by Sentry contain almost no
useful information about where they came from save the stack trace.

This commit adds basic request information (URL, method, etc.) to errors
thrown from within the application.

In addition, we now log 404s for informational purposes.

I've also added an explanatory comment to the middleware stack
configured in `production.ini` so that the role of the raven middleware
is understood.

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -1,5 +1,11 @@
 [pipeline:main]
-pipeline: proxy-prefix raven h
+# Most errors will be handled in exception views within the application. The
+# raven middleware is here primarily as a fail-safe, and to capture errors
+# thrown by framework code.
+pipeline:
+  proxy-prefix
+  raven
+  h
 
 
 [app:h]
