Add a debug mailer to assist in debugging
Add a dummy mailer implementation that prints the sent emails to STDERR.
This improves on the formatting of the previous dummy mailer by ensuring
that the email content is decoded before printing.

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -23,6 +23,7 @@ pyramid.includes:
     pyramid_mailer
     pyramid_multiauth
     pyramid_tm
+    h.debug
     h.session
 
 # Set a default persistent secret for development. DO NOT copy this into a
