--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "angular-route": "1.4.7",
     "angular-sanitize": "1.4.7",
     "angular-toastr": "^1.5.0",
-    "angular-websocket": "^1.0.13",
     "angulartics": "0.17.2",
     "autofill-event": "0.0.1",
     "autoprefixer": "^6.0.3",
@@ -44,6 +43,7 @@
     "node-uuid": "^1.4.3",
     "postcss": "^5.0.6",
     "raf": "^3.1.0",
+    "retry": "^0.8.0",
     "scroll-into-view": "^1.3.1",
     "showdown": "^1.2.1",
     "uglify-js": "^2.4.14",
