--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "extend": "^2.0.0",
     "frame-rpc": "^1.3.1",
     "hammerjs": "^2.0.4",
+    "inherits": "^2.0.1",
     "is-equal-shallow": "^0.1.3",
     "jquery": "1.11.1",
     "js-polyfills": "^0.1.11",
@@ -46,6 +47,7 @@
     "retry": "^0.8.0",
     "scroll-into-view": "^1.3.1",
     "showdown": "^1.2.1",
+    "tiny-emitter": "^1.0.1",
     "uglify-js": "^2.4.14",
     "unorm": "^1.3.3"
   },
