Copy Font Awesome from WordPress into app
This uses a completely separate front_css webassets bundle for now, the
CSS for the front page should be integrated with that in the site_css
bundle later.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -227,6 +227,13 @@ site_css:
       depends:
         - h:static/styles/*.scss
 
+# the H website front page (separate assets from the rest of the site for now)
+front_css:
+  output: styles/front.min.css
+  filters: cleancss
+  contents:
+    - h:static/styles/vendor/css/font-awesome.css
+
 # Help page
 help_page_css:
   output: styles/help-page.min.css
