Copy the WordPress theme CSS into the app
This just copies the already compiled and minified main.css file into
the app, doesn't yet try to copy the source Sass files and recreate the
assets pipeline for them.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -228,11 +228,14 @@ site_css:
         - h:static/styles/*.scss
 
 # the H website front page (separate assets from the rest of the site for now)
-front_css:
-  output: styles/front.min.css
-  filters: cleancss
+front_page_css:
+  output: styles/front-page.min.css
   contents:
-    - h:static/styles/vendor/css/font-awesome.css
+    - h:static/styles/front-page/main.css
+    - output: h:static/styles/front-page.css
+      filters: cleancss
+      contents:
+      - h:static/styles/vendor/css/font-awesome.css
 
 # Help page
 help_page_css:
