Use jquery from webassets not WordPress
Also move the <script> tag from the <head> to the bottom of the <body>.

This also removes the jquery-migrate.min.js that was previously included
as it doesn't appear to be needed.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -228,6 +228,10 @@ site_css:
         - h:static/styles/*.scss
 
 # the H website front page (separate assets from the rest of the site for now)
+front_page_js:
+  contents:
+    - jquery
+
 front_page_css:
   output: styles/front-page.min.css
   contents:
