Fix modal dialogs on front page
Bootstrap's JavaScript wasn't being included.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -43,7 +43,7 @@ angulartics_ga:
   contents: ../../node_modules/angulartics/src/angulartics-ga.js
 
 
-# Bootstrap (for admin areas only)
+# Bootstrap
 bootstrap:
   filters: uglifyjs
   output: scripts/vendor/bootstrap.min.js
