Integrate home.html.jinja2 with base.html.jinja2
Make home.html.jinja2 extend base.html.jinja2, as other site pages do.

This removes duplication of, for example, the Google Analytics tracking code
which should be on every page so is in base.html.jinja2.

The <html lang="en" and the various favicons and apple-touch-icons etc move
into base.html.jinja2, so now every page has them.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -227,7 +227,7 @@ site_css:
       depends:
         - h:static/styles/*.scss
 
-# the H website front page (separate assets from the rest of the site for now)
+# Assets needed for the H website front page only.
 front_page_js:
   contents:
     - jquery
