--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "is-equal-shallow": "^0.1.3",
     "jquery": "1.11.1",
     "js-polyfills": "^0.1.11",
-    "moment": "^2.10.6",
     "ng-tags-input": "2.2.0",
     "node-uuid": "^1.4.3",
     "postcss": "^5.0.6",
@@ -95,8 +94,7 @@
     "annotator": "./h/static/scripts/vendor/annotator.js",
     "angular": "./node_modules/angular/angular.js",
     "hammerjs": "./node_modules/hammerjs/hammer.js",
-    "jquery": "./node_modules/jquery/dist/jquery.js",
-    "moment": "./node_modules/moment/min/moment-with-locales.js"
+    "jquery": "./node_modules/jquery/dist/jquery.js"
   },
   "browserify-shim": {
     "annotator": {
