jshint: use the global form of strict
Tell jshint that use put our 'use strict'; statements at the top of the
file (because we're using browserify) not inside a wrapper function.

This gets rid of jshint 'Use the function form of "use strict"' errors.

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,7 @@
     "freeze": true,
     "latedef": "nofunc",
     "maxcomplexity": 10,
-    "strict": true,
+    "strict": "global",
     "undef": true,
     "unused": true,
     "globals": {
