Add config settings and docs for using YAPF to format Python files
Adds the one-line config setting to get
[YAPF](https://github.com/google/yapf) to
use PEP8 formatting.

With this, source files can be mostly-formatted according to
project conventions using 'yapf -i <file path>'. YAPF is
not as thorough as say gofmt, so may leave some style
violations after being run, but should not introduce any
new ones.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,6 @@ versionfile_source = h/_version.py
 versionfile_build = h/_version.py
 tag_prefix = v
 parentdir_prefix = h-
+
+[yapf]
+based_on_style = pep8
