Fix search autoconfig typo

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -6,7 +6,7 @@ pipeline: h
 use: egg:h
 
 h.db.should_create_all: True
-h.search.autoconfigure: True
+h.search.autoconfig: True
 
 es.host: http://localhost:9200
 
