Fix Chrome extension build with '--debug' flag
When building the extension with the '--debug' flag enabled,
which skips the uglifyjs step defined in assets.yaml,
this resulted in an invalid URL being generated for
app.js in app.html.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -132,7 +132,7 @@ app_js:
     - output: scripts/app.min.js
       filters: uglifyjs
       contents:
-        - output: h:static/scripts/app.js
+        - output: static/scripts/app.js
           filters: browserify
           contents: h:static/scripts/app.coffee
           depends:
