Fix client-side router on site
The JS for the group share page failed to load
because of an incorrect comparison of the result
of String.match() against a number and also
because of an attempt to load Bootstrap
unnecessarily on this pages.

This commit fixes the issue and prepares us for
adding new pages in future by:

 * Adding a client-side micro-router to simplify running
   page-specific JS

 * Only loading the Bootstrap components on pages that
   actually need it.

Fixes #2867

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "js-polyfills": "^0.1.11",
     "ng-tags-input": "2.2.0",
     "node-uuid": "^1.4.3",
+    "page": "^1.6.4",
     "postcss": "^5.0.6",
     "raf": "^3.1.0",
     "raven-js": "^2.0.2",
