--- a/conf/websocket.ini
+++ b/conf/websocket.ini
@@ -12,6 +12,9 @@ pyramid.includes:
     pyramid_redis_sessions
     pyramid_tm
 
+# Use gevent-compatible transport for the Sentry client
+raven.transport: gevent
+
 # Redis session configuration -- See pyramid_redis_sessions documentation
 #redis.sessions.secret:
 redis.sessions.cookie_httponly: True
