--- a/conf/websocket.ini
+++ b/conf/websocket.ini
@@ -26,8 +26,8 @@ sqlalchemy.url: postgresql://postgres@localhost/postgres
 
 [server:main]
 use: egg:gunicorn
-host: localhost
-port: 8001
+host: 0.0.0.0
+port: 5001
 worker_class: h.websocket.Worker
 graceful_timeout: 0
 
