--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ cache:
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
 notifications:
-  irc:
-    channels:
-       "chat.freenode.net#hypothes.is"
-    on_success: "change"
-    on_failure: "always"
+  slack:
+    secure: SKPwtfoH32aDop6hLhQdgrUhl58gM6CMBUATMdq0KMmEwCxskPbIArqxGUKxeeiO3c3jBQ+Yuq3b4m8GbR2AJxxelO0DRLNyV1lAjfeJ/QzCc3Taxqo0yel4uAFNg/oCYWH50dv2oAgDP3CHk/tKXmsgDWOjcm6A6k35xst16xI=
+    on_success: change
+    on_failure: always
