Rename CHANGES.txt -> CHANGES
Other text files at the repository root (AUTHORS, LICENSE, etc.) do not
have a file extension, so there's no reason the CHANGES file should have
one.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include Makefile AUTHORS CHANGES.txt LICENSE NOTICE
+include Makefile AUTHORS CHANGES LICENSE NOTICE
 include gunicorn.conf.py
 include package.json
 include requirements.txt
