Include Dockerfile in sdist tarball

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include Makefile AUTHORS CHANGES LICENSE NOTICE
+include Dockerfile
 include gunicorn.conf.py
 include package.json
 include requirements.txt
